--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 customtkinter==5.2.2
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
+pandas~=2.2.3
+numpy~=2.2.6
+scikit-learn~=1.6.1
 openpyxl==3.1.2
 matplotlib==3.7.2
 seaborn==0.12.2
-pytest==7.4.0
+pytest~=8.3.5
 pytest-cov==4.1.0
 unittest-xml-reporting==3.2.0
+ttkbootstrap~=1.13.8
+pillow~=10.4.0
